--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.2",
     "nodemon": "^3.0.3"
   }
