--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "moment": "^2.30.1",
